fix align

--- a/src/index.less
+++ b/src/index.less
@@ -711,6 +711,12 @@ body {
     &.active {
       background: rgba(0, 0, 0, .08);
     }
+
+    .@{css-prefix}-dropdown-header {
+      .icon-align-left, .icon-align-middle {
+        display: inline-block;
+      }
+    }
   }
 }
 
